0028495: The maximal depth of the tree is used implicitly in type 'BVH_PrimitiveSet'

Type 'BVH_PrimitiveSet' was extended by a static constant to access the maximal depth of the tree.